change proto api
