# go-commons/gen/proto/route/route.pb.go
@@ -26,10 +26,10 @@ const (
 
 type OBUData struct {
 	state         protoimpl.MessageState `protogen:"open.v1"`
-	DeviceId      []byte                 `protobuf:"bytes,1,opt,name=device_id,json=deviceId,proto3" json:"device_id,omitempty"` // 16-byte uuid
-	Latitude      float64                `protobuf:"fixed64,2,opt,name=latitude,proto3" json:"latitude,omitempty"`
-	Longitude     float64                `protobuf:"fixed64,3,opt,name=longitude,proto3" json:"longitude,omitempty"`
-	Timestamp     *timestamppb.Timestamp `protobuf:"bytes,4,opt,name=timestamp,proto3" json:"timestamp,omitempty"`
+	SessionId     []byte                 `protobuf:"bytes,2,opt,name=session_id,json=sessionId,proto3" json:"session_id,omitempty"` // 16-byte uuid
+	Latitude      float64                `protobuf:"fixed64,3,opt,name=latitude,proto3" json:"latitude,omitempty"`
+	Longitude     float64                `protobuf:"fixed64,4,opt,name=longitude,proto3" json:"longitude,omitempty"`
+	Timestamp     *timestamppb.Timestamp `protobuf:"bytes,5,opt,name=timestamp,proto3" json:"timestamp,omitempty"`
 	unknownFields protoimpl.UnknownFields
 	sizeCache     protoimpl.SizeCache
 }
@@ -64,9 +64,9 @@ func (*OBUData) Descriptor() ([]byte, []int) {
 	return file_proto_route_route_proto_rawDescGZIP(), []int{0}
 }
 
-func (x *OBUData) GetDeviceId() []byte {
+func (x *OBUData) GetSessionId() []byte {
 	if x != nil {
-		return x.DeviceId
+		return x.SessionId
 	}
 	return nil
 }
@@ -92,27 +92,27 @@ func (x *OBUData) GetTimestamp() *timestamppb.Timestamp {
 	return nil
 }
 
-type DeviceID struct {
+type Session struct {
 	state         protoimpl.MessageState `protogen:"open.v1"`
-	DeviceId      []byte                 `protobuf:"bytes,1,opt,name=device_id,json=deviceId,proto3" json:"device_id,omitempty"`
+	SessionId     []byte                 `protobuf:"bytes,1,opt,name=session_id,json=sessionId,proto3" json:"session_id,omitempty"`
 	unknownFields protoimpl.UnknownFields
 	sizeCache     protoimpl.SizeCache
 }
 
-func (x *DeviceID) Reset() {
-	*x = DeviceID{}
+func (x *Session) Reset() {
+	*x = Session{}
 	mi := &file_proto_route_route_proto_msgTypes[1]
 	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 	ms.StoreMessageInfo(mi)
 }
 
-func (x *DeviceID) String() string {
+func (x *Session) String() string {
 	return protoimpl.X.MessageStringOf(x)
 }
 
-func (*DeviceID) ProtoMessage() {}
+func (*Session) ProtoMessage() {}
 
-func (x *DeviceID) ProtoReflect() protoreflect.Message {
+func (x *Session) ProtoReflect() protoreflect.Message {
 	mi := &file_proto_route_route_proto_msgTypes[1]
 	if x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
@@ -124,14 +124,14 @@ func (x *DeviceID) ProtoReflect() protoreflect.Message {
 	return mi.MessageOf(x)
 }
 
-// Deprecated: Use DeviceID.ProtoReflect.Descriptor instead.
-func (*DeviceID) Descriptor() ([]byte, []int) {
+// Deprecated: Use Session.ProtoReflect.Descriptor instead.
+func (*Session) Descriptor() ([]byte, []int) {
 	return file_proto_route_route_proto_rawDescGZIP(), []int{1}
 }
 
-func (x *DeviceID) GetDeviceId() []byte {
+func (x *Session) GetSessionId() []byte {
 	if x != nil {
-		return x.DeviceId
+		return x.SessionId
 	}
 	return nil
 }
@@ -140,18 +140,20 @@ var File_proto_route_route_proto protoreflect.FileDescriptor
 
 const file_proto_route_route_proto_rawDesc = "" +
 	"\n" +
-	"\x17proto/route/route.proto\x12\blocation\x1a\x1cgoogle/api/annotations.proto\x1a\x1fgoogle/protobuf/timestamp.proto\x1a\x1bgoogle/protobuf/empty.proto\"\x9a\x01\n" +
-	"\aOBUData\x12\x1b\n" +
-	"\tdevice_id\x18\x01 \x01(\fR\bdeviceId\x12\x1a\n" +
-	"\blatitude\x18\x02 \x01(\x01R\blatitude\x12\x1c\n" +
-	"\tlongitude\x18\x03 \x01(\x01R\tlongitude\x128\n" +
-	"\ttimestamp\x18\x04 \x01(\v2\x1a.google.protobuf.TimestampR\ttimestamp\"'\n" +
-	"\bDeviceID\x12\x1b\n" +
-	"\tdevice_id\x18\x01 \x01(\fR\bdeviceId2\x8c\x02\n" +
-	"\x05Route\x12V\n" +
-	"\fStartSession\x12\x12.location.DeviceID\x1a\x16.google.protobuf.Empty\"\x1a\x82\xd3\xe4\x93\x02\x14:\x01*\"\x0f/v1/route/start\x12R\n" +
+	"\x17proto/route/route.proto\x12\blocation\x1a\x1cgoogle/api/annotations.proto\x1a\x1fgoogle/protobuf/timestamp.proto\x1a\x1bgoogle/protobuf/empty.proto\"\xa2\x01\n" +
+	"\aOBUData\x12\x1d\n" +
 	"\n" +
-	"EndSession\x12\x12.location.DeviceID\x1a\x16.google.protobuf.Empty\"\x18\x82\xd3\xe4\x93\x02\x12:\x01*\"\r/v1/route/end\x12W\n" +
+	"session_id\x18\x02 \x01(\fR\tsessionId\x12\x1a\n" +
+	"\blatitude\x18\x03 \x01(\x01R\blatitude\x12\x1c\n" +
+	"\tlongitude\x18\x04 \x01(\x01R\tlongitude\x128\n" +
+	"\ttimestamp\x18\x05 \x01(\v2\x1a.google.protobuf.TimestampR\ttimestampJ\x04\b\x01\x10\x02\"(\n" +
+	"\aSession\x12\x1d\n" +
+	"\n" +
+	"session_id\x18\x01 \x01(\fR\tsessionId2\x8a\x02\n" +
+	"\x05Route\x12U\n" +
+	"\fStartSession\x12\x16.google.protobuf.Empty\x1a\x11.location.Session\"\x1a\x82\xd3\xe4\x93\x02\x14:\x01*\"\x0f/v1/route/start\x12Q\n" +
+	"\n" +
+	"EndSession\x12\x11.location.Session\x1a\x16.google.protobuf.Empty\"\x18\x82\xd3\xe4\x93\x02\x12:\x01*\"\r/v1/route/end\x12W\n" +
 	"\tRouteChat\x12\x11.location.OBUData\x1a\x16.google.protobuf.Empty\"\x1d\x82\xd3\xe4\x93\x02\x17:\x01*\"\x12/v1/route/location(\x01BBZ@github.com/rauan06/realtime-map/go-commons/gen/proto/route;routeb\x06proto3"
 
 var (
@@ -169,16 +171,16 @@ func file_proto_route_route_proto_rawDescGZIP() []byte {
 var file_proto_route_route_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
 var file_proto_route_route_proto_goTypes = []any{
 	(*OBUData)(nil),               // 0: location.OBUData
-	(*DeviceID)(nil),              // 1: location.DeviceID
+	(*Session)(nil),               // 1: location.Session
 	(*timestamppb.Timestamp)(nil), // 2: google.protobuf.Timestamp
 	(*emptypb.Empty)(nil),         // 3: google.protobuf.Empty
 }
 var file_proto_route_route_proto_depIdxs = []int32{
 	2, // 0: location.OBUData.timestamp:type_name -> google.protobuf.Timestamp
-	1, // 1: location.Route.StartSession:input_type -> location.DeviceID
-	1, // 2: location.Route.EndSession:input_type -> location.DeviceID
+	3, // 1: location.Route.StartSession:input_type -> google.protobuf.Empty
+	1, // 2: location.Route.EndSession:input_type -> location.Session
 	0, // 3: location.Route.RouteChat:input_type -> location.OBUData
-	3, // 4: location.Route.StartSession:output_type -> google.protobuf.Empty
+	1, // 4: location.Route.StartSession:output_type -> location.Session
 	3, // 5: location.Route.EndSession:output_type -> google.protobuf.Empty
 	3, // 6: location.Route.RouteChat:output_type -> google.protobuf.Empty
 	4, // [4:7] is the sub-list for method output_type
